Adding full css file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
            </div>
 
            <!-- Complete Task -->
-            <div class="Complete-list box">
+            <div class="complete-list box">
                 <h2>Complete Tasks</h2>
                 <ul>
                     <li class="item">
