Adding js file and complete the project

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
            <div class="todo-list box">
             <h2>Incomplete Tasks</h2>
             <ul id="items">
-                <li class="item">
+                <!-- <li class="item">
                     <input type="checkbox">
                     <label>Task 1</label>
                     <button class="edit">Edit</button>
-                </li>
+                </li> -->
             </ul>
            </div>
 
@@ -44,10 +44,10 @@
             <div class="complete-list box">
                 <h2>Complete Tasks</h2>
                 <ul>
-                    <li class="item">
+                    <!-- <li class="item">
                         Task Name 1
                         <button class="delete">Delete</button>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
     </section>
